--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - web-root:/var/www/html
       - certbot-etc:/etc/letsencrypt
       - certbot-var:/var/lib/letsencrypt
+      - web-root:/var/www/html
 
   certbot:
     image: certbot/certbot
@@ -35,5 +35,5 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: /tmp/appsec.team/src/
+      device: /tmp/www
       o: bind
