--- a/site.conf
+++ b/site.conf
@@ -1,15 +1,42 @@
 server {
-        listen 80;
-        listen [::]:80;
-        server_name appsec.team www.appsec.team;
+          listen 443 ssl default_server;
+          server_name appsec.team;
 
-        location ~ /.well-known/acme-challenge {
-            allow all;
-            root /var/www/html;
-        }
+          gzip              on;
+          gzip_comp_level   2;
+          gzip_min_length   1024;
+          gzip_vary         on;
+          gzip_proxied      expired no-cache no-store private auth;
+          gzip_types        application/x-javascript application/javascript application/xml application/json text/xml text/css text$
 
-        location / {
-            rewrite ^ https://$host$request_uri? permanent;
-        }
+          client_body_timeout 12;
+          client_header_timeout 12;
+          reset_timedout_connection on;
+
+          proxy_connect_timeout       600;
+          proxy_send_timeout          600;
+          proxy_read_timeout          600;
+          send_timeout                600;
+
+          server_tokens off;
+          client_max_body_size 50m;
+          expires 1y;
+          access_log off;
+          log_not_found off;
+
+          root /usr/share/nginx/html;
+
+          ssl_certificate    /etc/letsencrypt/live/appsec.team/fullchain.pem;
+          ssl_certificate_key    /etc/letsencrypt/live/appsec.team/privkey.pem;
+
+          location / {
+            proxy_http_version 1.1;
+            root /usr/share/nginx/html
+          }
 }
 
+server {
+    listen 80;
+    server_name appsec.team;
+    return 301 https://$host$request_uri;
+}
