--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,27 @@
 version: '3.4'
 
 services:
+  cert:
+    container_name: cert
+    image: certbot/certbot
+    command: certonly -d appsec.team -d www.appsec.team --non-interactive --agree-tos -m artem@merets.ru --standalone
+    ports:
+    - "80:80"
+    volumes:
+    - /etc/letsencrypt:/etc/letsencrypt
+    - /var/lib/letsencrypt:/var/lib/letsencrypt
+
   nginx:
     container_name: nginx
     build:
       context: .
-      network: host
-      args:
-        - CERTBOT_EMAIL=artem@merets.ru
-        - DOMAIN_LIST=appsec.team,www.appsec.team
     restart: always
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d
-      - letsencrypt:/etc/letsencrypt
+      - /etc/letsencrypt:/etc/letsencrypt
     ports:
       - "80:80"
       - "443:443"
-volumes:
-  letsencrypt:
+    command:  sleep 30s && nginx -g 'daemon off;'
+    depends_on:
+      - cert
