--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -31,7 +31,7 @@ server {
 
           location / {
             proxy_http_version 1.1;
-            root /usr/share/nginx/html
+            root /usr/share/nginx/html;
           }
 }
 
